<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/text_calcular_notas"
        android:textSize="25sp"
        android:padding="60dp"
        android:background="@color/blueClaro"
        android:textColor="@color/blue"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/editText_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/text_nome"
        android:textColorHint="@color/blueClaro"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/gray"
        android:textColor="@color/blue"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/editText_age"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/text_idade"
        android:textColorHint="@color/blueClaro"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/gray"
        android:textColor="@color/blue"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/editText_nota1"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/text_nota_1"
        android:textColorHint="@color/blueClaro"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/gray"
        android:textColor="@color/blue"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/editText_nota2"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/text_nota_2"
        android:textColorHint="@color/blueClaro"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/gray"
        android:textColor="@color/blue"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/editText_nota3"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/text_nota_3"
        android:textColorHint="@color/blueClaro"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/gray"
        android:textColor="@color/blue"
        android:textSize="15sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_adicionar_novo_aluno"
        android:id="@+id/button_cadastrar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="15sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calcular"
        android:id="@+id/button_calcular"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="@color/green"
        android:textColor="@color/blue"
        android:padding="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="15sp"/>

</LinearLayout>